# churning_agent

./: .env.example  .gitignore  .secrets.env.example  README.md  __init__.py  agent.py  conftest.py  debug_scraper.py  discover.py  explore.py  explore_swagbucks.py  improvement_agent.py  login_once.py  portal.py  preflight.py  pyproject.toml
config/: user_profile.example.yaml  valuation.yaml
config/prompts/: doc_agent.yaml  eligibility_extractor.yaml  improvement_agent.yaml  offer_classifier.yaml  orchestrator.yaml  portal_agent.yaml  portal_orchestrated_protocol.yaml  post_classifier.yaml  prompt_improver.yaml
eval/: case_manager.py  eval_classifier.py  eval_offers.py  fetch_pages.py  generate_cases.py  improve_classifier.py
eval/agent_cases/: README.md  doc_finds_moneymaker.json  doc_no_new_posts.json  doc_uncertain_question.json  improver_accepts_good_change.json  improver_rejects_overfit.json  orch_check_new_fanout.json  orch_named_source.json  orch_profile_update.json  orch_show_existing.json  portal_login_blocked.json  swagbucks_assess_and_report.json  topcashback_rates.json
src/churning_agent/: __init__.py  _paths.py  agent.py  llm.py  (+4 more)
tests/: cache_pages.py  test_browser.py  test_browser_pool.py  test_classifier.py  test_escalation.py  test_llm.py  test_offer.py  test_offer_classifier.py  test_offer_log.py  test_offer_parsers.py  test_profile.py  test_reports.py  test_sites.py  test_valuation.py
tools/: browser.py  classifier.py  credentials.py  offer_log.py  offer_parsers.py  portal_tools.py  profile.py  scraper.py  state.py  store.py  valuation.py
(+32 files in other folders)
